# pyOCD

./: .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .lgtm.yml  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  HOW_TO_BUILD.md  MANIFEST.in  README.md  README.rst  dev-requirements.txt  get_site-packages.py  pudb-pyocd.sh  pyocd.py  pyocd.spec  pyproject.toml  pytest.ini  sd_test.py  set_version.sh  setup.cfg  setup.py  tox.ini  warp7_test.py
.azure/: functional-test-pipeline.yml
.github/workflows/: basic_test.yaml  basic_test_skipped.yaml  codeql.yaml  deploy-docs.yaml  nightly.yaml  release_builds.yaml
docs/: ADDING_NEW_DEVICES.md  ADDING_NEW_TARGETS.md  API_EXAMPLES.md  ARCHITECTURE.md  AUTOMATED_TESTS.md  CONFIGURATION.md  DEVELOPERS_GUIDE.md  Doxyfile  HOW_TO_BUILD.md  HOW_TO_DEBUG_ON_VSCODE.md  MULTICORE_DEBUG.md  PYTHON_API.md  README.md  SESSION_OPTIONS.md  USER_SCRIPTS.md  adding_new_targets.md  api_examples.md  architecture.md  automated_tests.md  builtin-targets.md  cmsis_pack_debug_descriptions.md  command_reference.md  configuration.md  configuring_logging.md  debug_probes.md  developers_guide.md  docs.yml  doxygen_footer.html  doxygen_layout.xml  env_vars.md  faq.md  gdb_setup.md  gdbserver.md  how_to_build.md  installing.md  installing_on_non_x86.md  memory_attributes.md  multicore_debug.md  open_cmsis_pack_support.md  options.md  (+10 more)
docs/api/: architecture.md  using_session_options.md
docs/developer/: board_ids.md
docs/resources/: doxygen_style.css
pyOCD/: __init__.py  __pkginfo__.py  svd.py
pyOCD/board/: __init__.py  board.py  board_ids.py  mbed_board.py
pyOCD/core/: coresight_target.py  exceptions.py  helpers.py  instruction.py  instruction_record.py  memory_interface.py  memory_map.py  session.py  target.py
pyOCD/coresight/: __init__.py  ap.py  breakpoints.py  cortex_a.py  cortex_m.py  cortex_target.py  dap.py  dwt.py  fpb.py  rom_table.py
pyOCD/debug/: __init__.py  cache.py  context.py  semihost.py  svd.py  symbols.py
pyOCD/flash/: __init__.py  flash.py  flash_builder.py  flash_cortex_m.py  flash_k20d50m.py  flash_k22f.py  flash_k64f.py  flash_k66f18.py  flash_k82f25615.py  flash_ke15z7.py  flash_ke18f16.py  flash_kinetis.py  flash_kl02z.py  flash_kl05z.py  flash_kl25z.py  flash_kl26z.py  flash_kl27z4.py  flash_kl27z644.py  flash_kl28z.py  flash_kl43z4.py  flash_kl46z.py  flash_klxx.py  flash_kv10z7.py  flash_kv11z7.py  flash_kw01z4.py  flash_kw40z4.py  flash_lpc11u24.py  flash_lpc11xx_32.py  flash_lpc1768.py  flash_lpc4088.py  flash_lpc4088qsb_dm.py  flash_lpc4330.py  flash_lpc800.py  flash_lpc824.py  flash_max32600mbed.py  flash_maxwsnenv.py  flash_ncs36510.py  flash_nrf51.py  flash_nrf51822.py  flash_nrf52.py  (+4 more)
pyOCD/gdbserver/: __init__.py  context_facade.py  gdb_socket.py  gdb_websocket.py  gdbserver.py  signals.py  symbols.py  syscall.py
pyOCD/interface/: __init__.py  hidapi_backend.py  interface.py  pyusb_backend.py  pywinusb_backend.py
pyOCD/probe/: __init__.py  aggregator.py  cmsis_dap_probe.py  debug_probe.py  stlink_probe.py
pyOCD/pyDAPAccess/: __init__.py  cmsis_dap_core.py  dap_access_api.py  dap_access_cmsis_dap.py  dap_access_usb.py  dap_settings.py
pyOCD/rtos/: __init__.py  argon.py  common.py  freertos.py  provider.py  rtx.py  rtx5.py  zephyr.py
pyOCD/tools/: pyocd.py  (+3 more)
pyocd/: __init__.py  __main__.py  _build.py
scripts/: generate_builtin_target_docs.py  generate_command_help.py  generate_flash_algo.py  set_version.sh
test/: .gitignore  automated_test.py  basic_test.py  blank_test.py  commander_test.py  commands_test.py  concurrency_test.py  connect_test.py  cortex_test.py  debug_context_test.py  flash_loader_test.py  flash_test.py  flash_tool.py  gdb_nrf51822.py  gdb_script.py  gdb_server.py  gdb_server_json_test.py  gdb_test.py  gdb_test_script.py  import_all.py  json_lists_test.py  parallel_test.py  probeserver_test.py  pytest_report.html  speed_test.py  test_pyocd_tool.sh  test_user_script.py  test_util.py  unlock_kinetis.py  user_script_test.py
tools/: flash_nrf51.py  flash_nrf51822.py  flash_tool.py  gdb_server.py  pyocd.py
udev/: 49-stlinkv2-1.rules  49-stlinkv2.rules  49-stlinkv3.rules  49-vtlinkii.rules  49-wch-link.rules  50-cmsis-dap.rules  50-picoprobe.rules  50-pyocd.rules  README.md
util/: flash_nrf51822.py
(+406 files in other folders)
